# iot_machine_monitoring

./: README.md  pyproject.toml  snowflake.yml  streamlit_app.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
