[project]
name = "streamlit-app"
requires-python = ">= 3.11"
version = "0.0.1"
description = ""
dependencies = [
    "streamlit[snowflake]>=1.54.0"
]

[tool.uv]
constraint-dependencies = ["numba>=0.56.0"]

[tool.ruff]
line-length = 200
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
# ignore = ["E501"]
ignore = ["E501", "F541", "F841", "E402"]
